# django_auth2.0

./: db.sqlite3  manage.py  pyproject.toml
social_authen/: asgi.py  settings.py  urls.py  wsgi.py
social_authen/account/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
social_authen/account/migrations/: 0001_initial.py
